samples/_failures_safe/1761071719_ea9b0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2220f28b.c: In function ‘main’:
./samples/SAFE/__tmp_2220f28b.c:164:5: error: expected expression at end of input
  164 |     if (len > 0 && input[len - 1] == '\n')
      |     ^~
./samples/SAFE/__tmp_2220f28b.c:164:5: error: expected declaration or statement at end of input
